about to try something

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>The Stores of Lower Manhattan</h1>
+<p>Search what you want</p>
+
+<div class="results"></div>
