--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,9 @@
 <h1>The Stores of Lower Manhattan</h1>
 <p>Search what you want</p>
-
+<button id="button">Search</button>
+<select name="" id="selectBox">
+  <option value="">Make a selection</option>
+  <option value="nightlife">Nightlife</option>
+  <option value="shopping">Shopping</option>
+</select>
 <div class="results"></div>
