personal and professional services

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,5 +5,8 @@
   <option value="">Make a selection</option>
   <option value="nightlife">Nightlife</option>
   <option value="shopping">Shopping</option>
+  <option value="personal_and_professional_services">Personal and Professional Services</option>
+  <option value="full_sevice_dining">Full Sevice Dining</option>
+
 </select>
 <div class="results"></div>
