--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,8 @@
   <option value="nightlife">Nightlife</option>
   <option value="shopping">Shopping</option>
   <option value="personal_and_professional_services">Personal and Professional Services</option>
-  <option value="full_sevice_dining">Full Sevice Dining</option>
-
+  <option value="full_service_dining">Full Service Dining</option>
+  <option value="visitor_services">Visitor Services</option>}
+  option
 </select>
 <div class="results"></div>
