more done some styling

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -9,4 +9,8 @@
   width: 400px;
   border: 5px solid red;
   overflow-y: scroll;
+  background-color: blue;
+}
+body {
+  background-image: url('https://i.ytimg.com/vi/hFlmkkVve94/maxresdefault.jpg')
 }
