trying to push to db

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,13 +1,14 @@
 <h1>The Stores of Lower Manhattan</h1>
 <p>Search what you want</p>
-<button id="button">Search</button>
-<select name="" id="selectBox">
-  <option value="">Make a selection</option>
-  <option value="nightlife">Nightlife</option>
-  <option value="shopping">Shopping</option>
-  <option value="personal_and_professional_services">Personal and Professional Services</option>
-  <option value="full_service_dining">Full Service Dining</option>
-  <option value="visitor_services">Visitor Services</option>}
-  option
-</select>
+<!-- <form action=""> -->
+  <button id="button">Search</button>
+  <select name="" id="selectBox">
+    <option value="">Make a selection</option>
+    <option value="Nightlife">Nightlife</option>
+    <option value="Shopping">Shopping</option>
+    <option value="Personal and Professional Services">Personal and Professional Services</option>
+    <option value="Full Service Dining">Full Service Dining</option>
+    <option value="Visitor Services">Visitor Services</option>
+  </select>
+<!-- </form> -->
 <div class="results"></div>
