--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <h1>The Stores of Lower Manhattan</h1>
-<p>Search what you want</p>
-<!-- <form action=""> -->
+
+  <p>Search for a store, save it, then <strong><i>refresh the page</i></strong></p>
   <button id="button">Search</button>
   <select name="" id="selectBox">
     <option value="">Make a selection</option>
@@ -10,5 +10,8 @@
     <option value="Full Service Dining">Full Service Dining</option>
     <option value="Visitor Services">Visitor Services</option>
   </select>
-<!-- </form> -->
+<!-- <p class="left">Search</p>
+<p class="right">My Stores</p> -->
+
 <div class="results"></div>
+<div class="myShop"></div>
